# defuse

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  devenv.nix  pyproject.toml  pytest.ini
.github/workflows/: test.yml
src/defuse/: __init__.py  cli.py  config.py  downloader.py  formats.py  resources.py  sandbox.py  sanitizer.py
tests/: conftest.py  test_cli_cross_platform.py  test_downloader_cross_platform.py  test_linux_sandboxes.py  test_macos_integration.py  test_sanitizer_integration.py  test_windows_integration.py
tests/integration/: README.md  conftest.py  test_cli_integration.py  test_container_integration.py  test_end_to_end.py  test_failure_and_security.py
tests/unit/: test_cli_commands.py  test_config.py  test_formats.py  test_sandbox.py  test_sandbox_error_paths.py  test_sanitizer_error_paths.py
