[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defuse"
version = "0.1.0"
description = "Secure document download and sanitization tool using Dangerzone"
authors = [{name = "Defuse Contributors"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
    "Topic :: Office/Business",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["document", "security", "sanitize", "dangerzone", "malware", "office", "pdf", "download"]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]

[project.scripts]
defuse = "defuse.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[project.urls]
Homepage = "https://github.com/codyw912/defuse"
Issues = "https://github.com/codyw912/defuse/issues"

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "responses>=0.25.8",
    "ty>=0.0.1a19",
]

[tool.ruff.lint]
# Enable unused import and variable checks to match CI
select = ["E", "F", "W"]

# Be more lenient with test files for practical reasons
per-file-ignores = {"tests/*" = ["F841", "E501"]}
